--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,16 @@
 ### Sublime Text
 *.sublime-project
 *.sublime-workspace
+
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
