--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: java
 notifications:
   slack: hivexteam:xoSLoB9jIPnYqMcHLIesSlDZ
+before_install:
+  - nvm install node
+  - nvm use node
+  - npm test
 deploy:
   provider: elasticbeanstalk
   skip_cleanup: true
