--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: java
 notifications:
   slack: hivexteam:xoSLoB9jIPnYqMcHLIesSlDZ
-before_install:
-  - nvm install node
-  - nvm use node
-  - npm test
+# before_install:
+#   - nvm install node
+#   - nvm use node
+#   - npm install —-save-dev mocha
+#   - npm test
 deploy:
   provider: elasticbeanstalk
   skip_cleanup: true
