--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ notifications:
 #   - nvm install node
 #   - nvm use node
 #   - npm install --save-dev mocha
+#   - cd src/main/webapp/js/
 #   - npm test
+#   - cd ../../../..
 deploy:
   provider: elasticbeanstalk
   skip_cleanup: true
