--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ notifications:
 before_install:
   - nvm install node
   - nvm use node
-  - npm install --save-dev mocha
+  - npm install --global mocha
   - cd src/main/webapp/js/
   - npm test
   - cd ../../../..
