--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 notifications:
   slack: hivexteam:xoSLoB9jIPnYqMcHLIesSlDZ
+  email: false
 before_install:
   - nvm install node
   - nvm use node
