--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,6 @@
 	</welcome-file-list>
 	<error-page> 
 		<error-code>404</error-code> 
-		<location>/404.html</location> 
-	</error-page>s
+		<location>/index.html</location> 
+	</error-page>
 </web-app>
