--- a/src/main/webapp/js/package.json
+++ b/src/main/webapp/js/package.json
@@ -28,6 +28,7 @@
     "test": "test"
   },
   "devDependencies": {
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "requirejs": "^2.3.3"
   }
 }
