--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - nvm install node
   - nvm use node
   - npm install --global mocha
+  - npm install --global requirejs
   - cd src/main/webapp/js/
   - npm test
   - cd ../../../..
