--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ notifications:
 before_install:
   - nvm install node
   - nvm use node
-  - npm install --global mocha
-  - npm install --global requirejs
+  - npm install mocha
+  - npm install requirejs
   - cd src/main/webapp/js/
   - npm test
   - cd ../../../..
