--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
     	<artifactId>gson</artifactId>
     	<version>2.8.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>ST4</artifactId>
+      <version>4.0.8</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>swedesigner</finalName>
