--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -38,13 +37,16 @@
     <dependency>
     	<groupId>com.google.code.gson</groupId>
     	<artifactId>gson</artifactId>
-    	<version>2.8.0</version>
-    </dependency>
+    	</dependency>
       <dependency>
         	<groupId>org.antlr</groupId>
         	<artifactId>ST4</artifactId>
         	<version>4.0.8</version>
         </dependency>
+      <dependency>
+      	<groupId>org.json</groupId>
+      	<artifactId>json</artifactId>
+      	</dependency>
   </dependencies>
   <build>
     <finalName>swedesigner</finalName>
