--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <url>https://github.com/hivex-unipd/swedesigner</url>
+
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   
   <parent>
     <groupId>org.springframework.boot</groupId>
