--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ before_install:
   - nvm install node
   - nvm use node
   - cd src/main/webapp/js/
-  - npm install mocha
-  - npm install requirejs
-  - npm test
+  # - npm install mocha
+  # - npm install requirejs
+  # - npm test
   - rm -rf node_modules
   - npm install jsdoc
   - jsdoc -d ../doc -c ../doc/conf.json -R ../../../../README.md -r models/ views/ collection/
