--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   # - npm test
   - rm -rf node_modules
   - npm install jsdoc
-  - jsdoc -d ../docs/frontend -c ../docs/frontend/conf.json -R ../../../../README.md -r models/ views/ collection/
+  - jsdoc -d ../docs/frontend -c ../docs/frontend/conf.json -R ../../../../README.md -r models/ views/
   - cd ../../../..
   - mvn javadoc:javadoc
   - rm -rf src/main/webapp/docs/backend
