cambiato nome in accordo con  il pom.xml

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ deploy:
   app: swedesigner
   env: Custom-env
   region: eu-central-1
-  zip_file: target/swedesigner.war
+  zip_file: target/ROOT.war
   bucket_name: elasticbeanstalk-eu-central-1-538360443246
